--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Notify</title>
 </head>
 <body>
-    
+    <header></header>
+    <nav>
+        <div class="Titulo">
+            <h1>Notify</h1>
+            <p>A great new free psd theme to showcase</p>
+            <p>your new application.</p>
+            <img src="imagens/icone-ios.png" alt="">
+            <img src="imagens/icone-android.png" alt="">
+            <img src="imagens/icone-windows.png" alt="">
+        </div>
+        <img src="imagens/hand.png" alt="">
+    </nav>
+    <div class=editable>
+            <div class= ic1>
+        <img src="imagens/icone1.png" alt="">
+            </div>
+        <h3>Editable Theme</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>adipiscing elit. Suspendisse fringilla fringilla.</p>
+    </div>
+    <div class="flat">
+        <div class= ic1>
+        <img src="imagens/icone2.png" alt="">
+        </div>
+        <h3>Flat Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>adipiscing elit. Suspendisse fringilla fringilla.</p>
+    </div>
+    <div class="reach">
+            <div class= ic1>
+        <img src="imagens/icone3.png" alt="">
+            </div>
+        <h3>Reach Your Audience</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>adipiscing elit. Suspendisse fringilla fringilla.</p>
+    </div>
+    <section class="video">
+
+    </section>
+    <section class="imagens">
+
+    </section>
+    <footer>
+
+    </footer>
+    <div class=final></div>
+    </div>
 </body>
 </html>
