--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Notify</title>
 </head>
@@ -52,7 +52,12 @@
 
     </section>
     <footer>
-
+        <a href="#">Contact</a>
+        <a href="#">Download</a>
+        <a href="#">Press</a>
+        <a href="#">Email</a>
+        <a href="#">Support</a>
+        <a href="#">Privacy Policy</a>
     </footer>
     <div class=final></div>
     </div>
