Criar texto e fotos acima do footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,40 @@
 
     </section>
     <section class="imagens">
-
+        <div class="texto">
+            <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mauris interdum velit vitae nulla molestie eu</p>
+            <p>commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut."</p>
+            <h3>Jane Hunt</h3>
+        </div>
+        <div class="pessoas">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+                <img src="imagens/pessoa1.jpg" alt="">
+        </div>
+        <div class="texto2">
+            <h2>Say Hi & Get in Touch</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit suspendisse.</p>
+            <img src="imagens/icones-redessociais.PNG" alt="">
+        </div>
     </section>
     <footer>
         <a href="#">Contact</a>
