Acrescentar video com texto

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
             <h1>Notify</h1>
             <p>A great new free psd theme to showcase</p>
             <p>your new application.</p>
+            <div class="icnav">
             <img src="imagens/icone-ios.png" alt="">
             <img src="imagens/icone-android.png" alt="">
             <img src="imagens/icone-windows.png" alt="">
         </div>
+        </div>
+        <div class="celular">
         <img src="imagens/hand.png" alt="">
+    </div>
     </nav>
     <div class=editable>
             <div class= ic1>
@@ -46,7 +50,18 @@
         <p>adipiscing elit. Suspendisse fringilla fringilla.</p>
     </div>
     <section class="video">
-
+        <div class="texto-video">
+        <h3>Get Notified Of Any Updates!</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse</p>
+        <p>fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at</p>
+        <p>elementum mauris. Phasellus eget nisi dapibus, ultrices nisl at, hendrerit</p>
+        <p>risusuis ornare luctus id sollicitudin ante lobortis at.</p>
+        <input type="text" placeholder="Email Adress">
+        <input type="button" value="Notify">
+        </div>
+        <div class="imagem-video">
+            <img src="imagens/video.PNG" alt="">
+        </div>
     </section>
     <section class="imagens">
         <div class="texto">
