--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Notify</title>
@@ -12,13 +15,23 @@
     <header></header>
     <nav>
         <div class="Titulo">
-            <h1>Notify</h1>
+            <h1 class="Notify"> Notify<span class="ponto">.</span></h1>
             <p>A great new free psd theme to showcase</p>
             <p>your new application.</p>
+
+
             <div class="icnav">
-            <img src="imagens/icone-ios.png" alt="">
-            <img src="imagens/icone-android.png" alt="">
-            <img src="imagens/icone-windows.png" alt="">
+
+                <div class="icon1">
+                    <a href="#"><img src="imagens/icone-ios.png" alt="*"></a>
+                </div>
+                <div class="icon1">
+                        <a href="#"><img src="imagens/icone-android.png" alt=""></a>
+                </div>          
+                <div class="icon1">
+                        <a href="#">  <img src="imagens/icone-windows.png" alt=""></a>
+                </div>  
+                </div>
         </div>
         </div>
         <div class="celular">
@@ -38,7 +51,7 @@
         <img src="imagens/icone2.png" alt="">
         </div>
         <h3>Flat Design</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>L dolor sit amet, consectetur</p>
         <p>adipiscing elit. Suspendisse fringilla fringilla.</p>
     </div>
     <div class="reach">
